# growin

./: .gitignore  .travis.yml  LICENSE  LICENSE.md  License.md  README.md  asv.conf.json  fourier_exb.py  generate_plots.py  growth_rate.py  requirements.txt  setup.cfg  setup.py  tmp_scrip.py
demo/: f10.lst  f10_tool.py  fake_drifts.py  generate_plots.py  survey_plots.py
docs/: api.rst  conf.py  index.rst
growin/: __init__.py  _core.py  _core_sami2.py  _core_sami3.py  ccmc_sami3_to_netcdf.py  example.py  fourier_exb.py  growth_rate.py  readsami3.py  utils.py
growin/tests/: test_fourier_exb.py
irfl/: __init__.py  _core.py  generate_plots.py  growth_rate.py  utils.py
