[metadata]
name = growin
version = file: growin/version.txt
url = https://github.com/JonathonMSmith/growin
author = Jonathon M. Smith and Jeffrey Klenzing
author_email = jonathon.m.smith@nasa.gov
description = 'Computes the Flux Tube Integrated Generalized Rayleigh-Taylor Growth rate'
keywords = 
 growin
 ionosphere
 atmosphere
 instability
 models
 space
 analysis
 heliosphere
 thermosphere
classifiers = 
 Development Status :: 3 - Alpha Copy
 Intended Audience :: Science/Research
 Topic :: Scientific/Engineering :: Astronomy
 Topic :: Scientific/Engineering :: Physics
 Topic :: Scientific/Engineering :: Atmospheric Science
 License :: BDS License
 Natural Language :: English
 Programming Language :: Python :: 3.9
 Operating System :: MacOS :: MacOS X
 Operating System :: POSIX :: Linux
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.9
setup_requires = pip > 10
include_package_data = True
zip_safe = False
packages = find:
install_requires = numpy
        apexpy
        future
        igrf12
        matplotlib
        netCDF4
        pysat
        sami2py
        pyglow

[coverage:report]

[flake8]
max-line-length = 80
ignore = 
 d200
 d202
 W503

[tool:pytest]

